# deep-learning-framework

./: .gitignore  BidRNN_seqAtt.ipynb  GNN_practice.ipynb  README.md  abc_practice.ipynb  data_loader.py  main.py  normalization.ipynb  pyproject.toml  tools.py  train.py  train_ddp.py  train_ffc.ipynb  train_resnet.py  train_saibr.py  tree_generator.py  vit_train.ipynb
.claude/skills/deep-learning/: SKILL.md
configs/: bid_rnn.yaml  resnet50.yaml  resnet50_ver1.yaml  simple_ffc.yaml  vit.yaml  vit_ddp.yaml
datasets/: __init__.py  cifar10.py
manuals/: manual.md  prompt.md
models/: __init__.py  base_model.py  resnet.py  saibr.py  vit.py
scripts/: format.sh  run.sh
src/data/: cifar10.py
src/models/: __init__.py  base_model.py  ffc.py  resnet.py  transformer.py  vit.py
src/training/: train.py  train_ddp.py
src/utils/: tools.py  tree_generator.py
