[project]
name = "deep-learning-framework"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.3",
    "omegaconf>=2.3.0",
    "ruff>=0.15.6",
    "tensordict>=0.11.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "N",
    "Q",
    "PERF402",
    "PERF403",
    "PLE0115",
    "PLE0117",
    "PLR1704",
    "PLR1714",
    "PLW2901"
]
ignore = ["PLW2901", "F401"]
